--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,15 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: Your Awesome Site
-email: your-email@domain.com
-author: Your Name
-description: > # "Write an awesome description for your new site here. 
-  You can edit this line in _config.yml. It will appear in your document 
-  head meta (for Google search results) and in your feed.xml site 
-  description.
-copyright: 'Copyright &copy; 2015 Your Name. All Rights Reserved.'
-credits: 'Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.'
+url: http://avpsoftware.co.uk
+title: AVP Software
+email: info@avpsoftware.co.uk
+author: AVP Software
+description: > # "Write an awesome description for your new site here.
+  We are a software consultancy, which also provides graphic design services.
+  Specialists in XP, UX/UI, Java, Cloud Native and TDD.
+copyright: 'Copyright &copy; 2019 AVP Software Limited. All Rights Reserved.'
+credits: 'AVP Software Limited'
 
 # ----------------------- #
 #    Jekyll & Plugins     #
@@ -26,9 +25,9 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  - title: twitter
-    url: https://twitter.com/SBootstrap
-  - title: github
-    url: https://github.com/IronSummitMedia/startbootstrap
+  - title: mail
+    icon: envelope
+    url: mailto:info@avpsoftware.co.uk
   - title: linkedin
-    url: 
+    icon: linkedin
+    url: https://www.linkedin.com/company/avp-software-limited
